DevTools: Fix memory counters view when it's too narrow
Review URL: https://codereview.chromium.org/258733012

git-svn-id: svn://svn.chromium.org/blink/trunk@172745 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/timelinePanel.css
+++ b/front_end/timelinePanel.css
@@ -459,11 +459,13 @@
 }
 
 #memory-graphs-container .sidebar-tree-section {
-    padding: 3px 0 0 5px;
+    flex: 0 0 24px;
+    padding: 5px 0 0 5px;
 }
 
 .memory-counter-sidebar-info {
-    margin: 5px;
+    flex: 0 0 18px;
+    margin-left: 5px;
     white-space: nowrap;
 }
 
